# my_rest_api

./: .copier-answers.yml  .coverage  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  database.sqlite  pyproject.toml
.devcontainer/: .promptname  Dockerfile  devcontainer.json
.github/workflows/: _check-version-tag.yml  _integration.yml
docs/source/: conf.py  index.rst
docs/source/api_documentation/: app.rst  config.rst  model.rst  rest_api.rst
docs/source/rest_api/: rest_api_information.rst
src/my_rest_api/: __init__.py  api_account.py  api_authentication.py  api_errors.py  api_resources_api_clients.py  api_resources_api_tokens.py  api_resources_tags.py  api_resources_user_settings.py  api_resources_users.py  api_rest_api.py  api_users.py  app.py  app_config.py  auth.py  authentication.py  authorization.py  config.py  custom_errors_handlers.py  dependencies.py  exception.py  exceptions.py  filter_generator.py  generic_endpoint_details.py  local_endpoint_details.py  model.py  my_rest_api.py  pagination.py  pagination_generator.py  resource_crud_api_router_generator.py  resource_crud_operations.py  rest_api.py  sort_generator.py  sorting_generator.py
tests/: conftest.py  test_api_account.py  test_api_authentication.py  test_api_resources.py  test_api_resources_create.py  test_api_resources_delete.py  test_api_resources_retrieve.py  test_api_resources_tags.py  test_api_resources_update.py  test_api_resources_users.py  test_api_rest_api.py  test_api_tags.py  test_api_token_authenticator.py  test_api_users.py  test_app_config.py  test_authentication.py  test_authorization.py  test_data.json  test_dependencies.py  test_filter_generator.py  test_my_rest_api.py  test_pagination_generator.py  test_resource_crud_api_router_generator.py  test_resource_crud_operations.py  test_rest_api.py  test_sorting_generation.py
