[tool.poetry]
name = "ds-my-rest-api"
version = "1.0.0-dev"
description = "REST API service for the My Project"
authors = ["Daryl Stark <daryl@dstark.nl>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "my_rest_api", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.25.0"
pydantic-settings = "^2.1.0"
ds-my-data = "1.2.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-sugar = "^0.9.7"
pycodestyle = "^2.11.0"
pylint = "^2.17.5"
mypy = "^1.5.1"
flake8 = "^6.1.0"
pydocstyle = "^6.3.0"
darglint2 = "^1.8.2"
autopep8 = "^2.0.2"
bumpver = "^2023.1126"
toml = "^0.10.2"
httpx = "^0.26.0"
pytest-env = "^1.1.3"

[tool.poetry.group.doc]
optional = true

[tool.poetry.group.doc.dependencies]
sphinx = "^6.2.1"
sphinx-rtd-theme = "^1.2.2"
sphinxcontrib-mermaid = "^0.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bumpver]
current_version = "1.0.0-dev"
version_pattern = "MAJOR.MINOR.PATCH[-TAG]"
commit_message = "Version {new_version}"
commit = true
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/my_rest_api/__init__.py" = ["{version}"]

[tool.pytest.ini_options]
addopts = ['--cov=my_rest_api', '--cov-report=html', '--cov-report=lcov']
env = [
    "MY_REST_API_DATABASE_STR=sqlite:////tmp/my_rest_api.pytest.db"
]
